--- a/assests/styles/main.css
+++ b/assests/styles/main.css
@@ -10,6 +10,7 @@
     --light-yellow : #fff4d1;
     --normal-yellow : #FFD166;
     --red : #ef476f;
+    --heart : #ff1a3b;
     --black : #333333;
     --blue : #0683d6;
 }
@@ -28,24 +29,44 @@ header {
     width: 95%;
     height: 75%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     position: relative;
 }
 
 .title-and-logo {
-    position: absolute;
+    position: relative;
     width: 50%;
     height: 100%;
     right: 0;
     direction: rtl;
     display: flex;
     align-items: center;
+
+    justify-content: flex-start;
+}
+
+.header-logo-box {
+    display: flex;
+    position: relative;
+    width: 75px;
+    height: 75px;
 }
 
 .header-logo {
     height: 75px;
     aspect-ratio: 1;
+    position: absolute;
+    transition: all 0.4s ;
+}
+
+.logo2:hover {
+    transform: scale(1.01);
+    filter: drop-shadow(var(--heart) 0px 0px 8px);
+}
+
+.logo3 {
+    pointer-events: none;
 }
 
 .header-title {
@@ -60,7 +81,6 @@ header {
     width: 50%;
     height: 50%;
     left: 0;
-
     display: flex;
     align-items: center;
 }
