--- a/assests/styles/main.css
+++ b/assests/styles/main.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     user-select: none;
 }
-
 :root {
     --background : #ffffff;
     --light-yellow : #fff4d1;
@@ -33,7 +32,6 @@ header {
     align-items: center;
     position: relative;
 }
-
 .title-and-logo {
     position: relative;
     width: 50%;
@@ -45,37 +43,31 @@ header {
 
     justify-content: flex-start;
 }
-
 .header-logo-box {
     display: flex;
     position: relative;
     width: 75px;
     height: 75px;
 }
-
 .header-logo {
     height: 75px;
     aspect-ratio: 1;
     position: absolute;
     transition: all 0.4s ;
 }
-
 .logo2:hover {
     transform: scale(1.01);
     filter: drop-shadow(var(--heart) 0px 0px 8px);
 }
-
 .logo3 {
     pointer-events: none;
 }
-
 .header-title {
     color: var(--black);
     font-size: 45px;
     margin-bottom: 15px;
     margin-right: 10px;
 }
-
 .header-items {
     position: absolute;
     width: 50%;
@@ -84,11 +76,14 @@ header {
     display: flex;
     align-items: center;
 }
-
 .header-item {
     width: 30px;
     margin-left: 10px;
     aspect-ratio: 1;
+    transition: all 0.1s;
+}
+.header-item:hover {
+    transform: translateY(-2px);
 }
 
 /* End of header */
@@ -116,7 +111,20 @@ nav {
     margin-right: 9px;
     font-weight: 600;
     font-size: 16px;
+    position: relative;
     cursor: pointer;
+}
+.nav-items-list li::before {
+    content: " ";
+    width: 100%;
+    height: 2px;
+    background-color: var(--red);
+    position: absolute;
+    transform: scaleX(0) translateY(22px);
+    transition: all 0.1s;
+}
+.nav-items-list li:hover::before {
+    transform: scaleX(1) translateY(22px);
 }
 .search-box {
     border-radius: 15px;
@@ -139,6 +147,9 @@ button.search {
     background-color: #ffffff;
     border-radius: 15px 0px 0px 15px
 }
+button.search img:active {
+    transform: scale(0.75);
+}
 button.search img {
     height: 100%;
     transition: all 0.1s;
@@ -157,8 +168,4 @@ button.search img {
 }
 .search-input::placeholder {
     font-size: 15px;
-}
-button.search img:active {
-    height: 90%;
-    margin-top: 4px;
 }
