--- a/assests/styles/main.css
+++ b/assests/styles/main.css
@@ -8,6 +8,7 @@
     --background : #ffffff;
     --light-yellow : #fff4d1;
     --normal-yellow : #FFD166;
+    --harder-yellow : #e4b549;
     --red : #ef476f;
     --heart : #ff1a3b;
     --black : #333333;
@@ -111,7 +112,7 @@ nav {
     align-items: center;
 }
 .nav-items-list li {
-    margin-right: 12px;
+    margin-right: 22px;
     font-weight: 600;
     font-size: 16px;
     position: relative;
@@ -175,9 +176,8 @@ button.search {
     aspect-ratio: 1.5;
     outline: none;
     border: none;
-    /* border-right: var(--black) 0    px solid; */
     background-color: #ffffff;
-    border-radius: 15px 0px 0px 15px
+    border-radius: 15px 0px 0px 15px;
 }
 button.search img:active {
     transform: scale(0.75);
@@ -198,6 +198,168 @@ button.search img {
     direction: rtl;
     padding-right: 7px;
 }
-.search-input::placeholder {
-    font-size: 15px;
+
+/* End of nav bar | start slideshow */
+
+.slide-show-box {
+    width: 100vw;
+    aspect-ratio: 2.6;
+    position: relative;
+}
+.slides-container {
+    height: 90%;
+    width: 90%;
+    margin: 2% 5% 12px 5%;
+    position: relative;
+    border-radius: 5px;
+    display: flex;
+    gap: 5px;
+}
+.slide {
+    height: 100%;
+    pointer-events: auto;
+    width: 10%;
+    flex: 1;
+    transition: all 1s;
+    border-radius: 15px;
+    overflow: hidden;
+    cursor: pointer;
+}
+.slide:hover {
+    flex: 5;
+}
+.slide img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+/* End of slideshow | start best seller products part */
+
+.best-seller-box {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-bottom: 100px;
+    margin-top: -10px;
+}
+.best-seller-title {
+    color: #333333;
+}
+.best-seller-products {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 0px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 30px;
+}
+.product {
+    cursor: pointer;
+    width: 250px;
+    display: inline-block;
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    aspect-ratio: 0.67;
+    margin-top: 20px;
+    filter: drop-shadow(rgba(0, 0, 0, 0.281) 0px 2px 5px);
+    background-color: #fff;
+    transition: all 0.3s;
+}
+.product:hover {
+    transform: translateY(-10px);
+}
+.product-thumbnail {
+    height: 70%;
+    object-fit: cover;
+}
+.product-content {
+    background-color: #ffffff;
+    width: 100%;
+    height: 30%;
+    position: absolute;
+    bottom: 0;
+    border-top: #333333 1px solid;
+    display: flex;
+    justify-content: center;
+}
+.product-title {
+    font-size: 20px;
+    position: absolute;
+    margin-top: 5px;
+    color: var(--black);
+}
+p.product-price {
+    position: absolute;
+    font-size: 12px;
+    color: var(--black);
+    margin-top: 35px;
+}
+.product-price-span {
+    color: #333333;
+    /* text-decoration: line-through; */
+    /* برای خط خوردن قیمت */
+}
+.product-buttons-box {
+    position: absolute;
+    height: 38%;
+    width: 95%;
+    margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 5px;
+}
+.observe-product {
+    background-color: var(--normal-yellow);
+    height: 100%;
+    width: 78%;
+    position: absolute;
+    right: 0;
+    color: var(--black);
+    font-size: 17px;
+    cursor: pointer;
+    border: none;
+    border-radius: 0px 10px 10px 0;
+    overflow: hidden;
+    transition: all 0.2s;
+}
+.observe-product::before {
+    content: "";
+    width: 20px;
+    height: 60px;
+    transform: translateY(-20px) translateX(-65px) rotate(30deg);
+    background-color: var(--light-yellow);
+    position: absolute;
+}
+.observe-product:hover::before {
+    transform: translateY(-20px) translateX(160px) rotate(30deg);
+    transition: all 0.4s;
+}
+.observe-product:active {
+    background-color: var(--harder-yellow);
+    transform: translateY(1px);
+}
+.add-to-cart {
+    width: 20%;
+    height: auto;
+    overflow: visi;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: var(--normal-yellow);
+    border: none;
+    border-radius: 10px 0 0 10px;
+}
+.add-to-cart img {
+    width: 80%;
+    height: 80%;
 }
