--- a/assests/styles/main.css
+++ b/assests/styles/main.css
@@ -74,7 +74,8 @@ header {
 .header-title {
     color: var(--black);
     font-size: 45px;
-    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
     margin-right: 10px;
 }
 .header-items {
@@ -291,11 +292,11 @@ button.search img {
 .product:hover {
     transform: translateY(-10px);
 }
-.product-thumbnail {
+.product img {
     height: 70%;
     object-fit: fill;
 }
-.product-content {
+.product > div {
     background-color: #ffffff;
     width: 100%;
     height: 30%;
@@ -305,24 +306,24 @@ button.search img {
     display: flex;
     justify-content: center;
 }
-.product-title {
+.product > div > h6 {
     font-size: 20px;
     position: absolute;
     margin-top: 5px;
     color: var(--black);
 }
-p.product-price {
+.product > div > p {
     position: absolute;
     font-size: 12px;
     color: var(--black);
     margin-top: 35px;
 }
-.product-price-span {
+.product > div > p > span {
     color: #333333;
     /* text-decoration: line-through; */
     /* برای خط خوردن قیمت */
 }
-.product-buttons-box {
+.product > div > div{
     position: absolute;
     height: 38%;
     width: 95%;
@@ -332,7 +333,7 @@ p.product-price {
     justify-content: flex-start;
     gap: 5px;
 }
-.observe-product {
+.product > div > div > button:nth-child(2) {
     background-color: var(--normal-yellow);
     height: 100%;
     width: 78%;
@@ -346,23 +347,23 @@ p.product-price {
     overflow: hidden;
     transition: all 0.2s;
 }
-.observe-product::before {
+.product > div > div > button:nth-child(2)::before {
     content: "";
     width: 20px;
     height: 60px;
-    transform: translateY(-20px) translateX(-65px) rotate(30deg);
+    transform: translateX(-115px) rotate(30deg);
     background-color: var(--light-yellow);
     position: absolute;
 }
-.observe-product:hover::before {
-    transform: translateY(-20px) translateX(160px) rotate(30deg);
+.product > div > div > button:nth-child(2):hover::before {
+    transform:translateX(115px) rotate(30deg);
     transition: all 0.4s;
 }
-.observe-product:active {
+.product > div > div > button:nth-child(2):active {
     background-color: var(--harder-yellow);
     transform: translateY(1px);
 }
-.add-to-cart {
+.product > div > div > button{
     width: 20%;
     height: auto;
     overflow: visi;
@@ -374,7 +375,7 @@ p.product-price {
     border: none;
     border-radius: 10px 0 0 10px;
 }
-.add-to-cart img {
+.product > div > div > button > img{
     width: 80%;
     height: 80%;
 }
@@ -388,6 +389,7 @@ footer {
     justify-content: center;
     gap: 0;
     direction: rtl;
+    overflow: hidden;
 }
 .footer-column {
     height: 100%;
@@ -585,13 +587,13 @@ html {
     .product img {
         height: 60%;
     }
-    .product-content {
+    .product > div {
         height: 40%;
     }
-    .product-buttons-box {
+    .product > div > div {
         height: 33%;
     }
-    .observe-product {
+    .product > div > div > button:nth-child(2) {
         font-size: 15px;
     }
 }
