--- a/assests/styles/main.css
+++ b/assests/styles/main.css
@@ -16,6 +16,7 @@ body {
     --red : #ef476f;
     --heart : #ff1a3b;
     --black : #333333;
+    --gray : #555555;
     --blue : #0683d6;
 }
 
@@ -106,6 +107,7 @@ nav {
     position: relative;
     display: flex;
     align-items: center;
+    filter: drop-shadow(rgba(0, 0, 0, 0.05) 0px 10px 10px);
 }
 .nav-items {
     position: absolute;
@@ -449,12 +451,17 @@ footer {
 }
 .social-media-box a i {
     font-size: 25px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 i {
     font-family: "Font Awesome 6 Brands";
     color: var(--black);
     font-style: normal;
-    font-size: 35px;
+    font-size: 35px;    
     transition: all 0.4s;
 }
 .social-media-box a:hover {
