--- a/assests/styles/productDetails.css
+++ b/assests/styles/productDetails.css
@@ -144,3 +144,130 @@ input.product-number {
     cursor: pointer;
     transition: all 0.2s;
 }
+
+/* product tabs */
+.product-tabs {
+    background-color: #fff;
+    filter: drop-shadow(rgba(0, 0, 0, 0.219) 0 10px 10px);
+    width: 100%;
+    height: 400px;
+    margin-top : 40px;
+    overflow: hidden;
+    border-radius: 5px;
+}
+.product-tabs-header {
+    width: 100%;
+    height: 80px;
+    border-bottom: var(--gray) solid 1px;
+    display: flex;
+    direction: rtl;
+    flex-direction: row;
+    align-items: center;
+}
+.product-tabs-header button {
+    width: 150px;
+    height: 80%;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--gray);
+    background-color: #fff;
+    border: unset;
+    transform: translateX(-20px);
+}
+.active-button::before{
+    content: "";
+    position: absolute;
+    width: 150px;
+    height: 2px;
+    background-color: var(--red);
+    top: 60px;
+    right: 0;
+}
+.active-button {
+    color: var(--red) !important;
+}
+.product-tabs-content {
+    height: 320px;
+    direction: rtl;
+    position: relative;
+    width: 100%;
+    padding: 15px 25px;
+}
+.product-tabs-content > div{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    padding-left: 25px;
+    background-color: #fff;
+    opacity: 0;
+    color: var(--black);
+}
+.active-tab {
+    opacity: 100% !important;
+}
+.product-tabs-content div h3 {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: 700;
+}
+.tabs-comments {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow-y: scroll;
+    scrollbar-width: 0;
+}
+.your-comment , .your-comment form{
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.your-comment input {
+    width: 1000px;
+    border-radius: 10px;
+    border: 1px solid var(--gray);
+    outline: unset;
+    padding-right: 10px;
+    font-size: 15px;
+    font-weight: 600;
+    color: var(--black);
+}
+.your-comment button {
+    width: 40px;
+    cursor: pointer;
+    border-radius: 50%;
+    border: none;
+    background-color: var(--red);
+    color: #fff;
+    transition: all 0.2s;
+}
+.your-comment button:active {
+    transform: scale(0.9);
+}
+.your-comment button i{
+    font-size: 20px;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.comment {
+    width: 1100px;
+    display: flex;
+    flex-direction: column;
+    justify-content : space-evenly;
+    padding : 10px 10px;
+    border-right: var(--red) 3px solid;
+}
+.comment h6{
+    font-size: 15px;
+}
+.comment p {
+    font-size: 20px;
+}
