--- a/assests/styles/productDetails.css
+++ b/assests/styles/productDetails.css
@@ -285,6 +285,38 @@ input.product-number {
     .add-product-to-cart {
         width: 60%;
         height: 40px;
-        margin: 20px 20%;
+        margin: 20px 20px;
+        font-size: 16px;
+        font-weight: 600;
+    }
+    .product-name , .product-details-price , .product-description , .number-box{
+        margin-right: 25px;
+    }
+    .product-meta {
+        padding-right: 25px;
+    }
+    .product-tabs-header button:nth-child(1) , .product-tabs-header button:nth-child(1)::before{
+        width: 120px;
+    }
+    .product-tabs-header button , .product-tabs-header button::before{
+        width: 100px;
+        font-size: 14px;
+        text-wrap: nowrap;
+    }
+}
+@media only screen and (max-width : 600px){
+    .product-details-box {
+        flex-direction: column;
+        height: 70vh;
+    }
+    .product-details-thumbnail , .product-details{
+        width: 100%;
+        height: 50%;
+    }
+    .product-details {
+        top: 50%;
+    }
+    .product-name , .product-details-price{
+        margin-top: 10px;
     }
 }
