--- a/assests/styles/productDetails.css
+++ b/assests/styles/productDetails.css
@@ -309,14 +309,33 @@ input.product-number {
         flex-direction: column;
         height: 70vh;
     }
-    .product-details-thumbnail , .product-details{
+    .product-details-thumbnail{
+        width: 100%;
+        height: 50%;
+    }
+    .product-details {
         width: 100%;
         height: 50%;
     }
     .product-details {
         top: 50%;
     }
-    .product-name , .product-details-price{
-        margin-top: 10px;
+    .product-name , .product-details-price , .number-box , .add-product-to-cart{
+        margin-top: 5px;
+    }
+    .your-comment input{
+        width: 200px;
+    }
+    .product-tabs-header {
+        position: relative;
+    }
+    .product-tabs button , .product-tabs button{
+        width: 110px !important;
+        font-size: 12px;
+        margin-right: -10px;
+    }
+    .your-comment button {
+        width: 40px !important;
+        margin-right : 10px;
     }
 }
